--- a/pages/index.html
+++ b/pages/index.html
@@ -5,10 +5,11 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Offers Market</title>
+	<link rel="stylesheet" href="/static/styles.css">
 </head>
 
 <body>
-	<h1>Offers</h1>
+	<h1 class="text-red-500">Offers</h1>
 	<ul>
 		{{range .Offers}}
 		<li>
